Fixed m-people__item vertical alignment

--- a/app/src/scss/modules/m-people.scss
+++ b/app/src/scss/modules/m-people.scss
@@ -45,6 +45,10 @@
   }
 
   &__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     flex-basis: 13em;
 
     margin: $spacing--s / 2;
